# notion-s3-sync

./: Cargo.toml  README.md  data.json
src/: config.rs  main.rs
src/cmd/: cli.rs  mod.rs
src/repo/: mod.rs  notion.rs
src/repo/notion/: client.rs  types.rs
