[package]
name = "notion-s3-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
envy = "0.4.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.137" , features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.19.0", features = ["full"] }
